<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/remindEdit"
        android:hint="@string/remindEdit"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancelRemindBT"
            android:text="@string/cancelBT"
            android:layout_weight="1"
            />
       <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/remindBT"
           android:text="@string/remindBT"
           android:layout_weight="1"
        />

    </LinearLayout>
</LinearLayout>
